[package]

name = "piston-viewport"
version = "0.0.3"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["viewport", "piston"]
description = "A library for storing viewport information"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/viewport.git"
homepage = "https://github.com/PistonDevelopers/viewport"

[lib]
name = "viewport"
path = "src/lib.rs"

[dependencies.piston-float]
#git = "https://github.com/pistondevelopers/float"
version = "0.0.2"

